codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__feedback_view__tests__feedback_upload_consent_lists_doctor_report.snap
---
source: tui/src/bottom_pane/feedback_view.rs
expression: rendered
---
Include logs?

The following files will be prepared locally:
  • codex-logs.log
  • codex-doctor-report.json
  • rollout.jsonl
  • auto-review-rollout.jsonl
